--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -7,7 +7,7 @@
     "jsxSingleQuote": true,
     "quoteProps": "as-needed",
     "trailingComma": "all",
-    "singleAttributePerLine": false,
+    "singleAttributePerLine": true,
     "htmlWhitespaceSensitivity": "css",
     "vueIndentScriptAndStyle": false,
     "proseWrap": "preserve",
